[package]
name = "keiro"
version = "0.1.0"
authors = ["Takayuki Nakata <f.seasons017@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"]}
route-recognizer = "0.3.0"
futures-util = "0.3.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "helloworld"

[[example]]
name = "struct_handler"
