[package]
name = "keiro"
version = "0.0.1"
authors = ["Takayuki Nakata <f.seasons017@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A lightweight router for Rust HTTP services."
repository = "https://github.com/giraffate/keiro"
readme = "README.md"
keywords = ["router", "http", "web", "hyper", "routing"]
documentation = "https://docs.rs/keiro"

[dependencies]
hyper = { version = "0.14", features = ["full"]}
route-recognizer = "0.3.0"
futures-util = "0.3.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "helloworld"

[[example]]
name = "struct_handler"
